--- a/index.html
+++ b/index.html
@@ -26,7 +26,19 @@
   .container1{
   margin:2vh 17vw;
   }
- #atmno,#pin,#bf,#am{
+ #atmno,#pin,#am{
+ margin:4px 0px;
+ padding:2px;
+ border:2px solid black;
+ border-radius:4px;
+ padding:3px;
+ width:64vw;
+ height:6vh;
+ font-weight: bold;
+ color:red;
+ background: transparent;
+ }
+    #bf{
  margin:4px 0px;
  padding:2px;
  border:2px solid black;
@@ -77,7 +89,7 @@
 <nav class="nav"></nav>
 <div class="container">
 <form>
- <input id="atmno"placeholder="Enter Atm Number here"required>
+ <input type="number" id="atmno"placeholder="Enter Atm Number here"required>
  <input type="text"id="pin" placeholder="Enter Pin here">
  <textarea type="readonly"id="bf" rows="5"columns="11"readonly>
  
